CompatHelper: bump compat for ClimaParams to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,7 @@ ClimaComms = "0.6.9"
 ClimaCore = "0.14.37"
 ClimaDiagnostics = "0.2.12"
 ClimaInterpolations = "0.1.0"
-ClimaParams = "0.12.1"
+ClimaParams = "0.12.1, 1"
 ClimaTimeSteppers = "0.8.2"
 ClimaUtilities = "0.1.23"
 CloudMicrophysics = "0.27"
