--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ NVTX = "0.3, 1"
 NullBroadcasts = "0.1"
 RRTMGP = "0.21.5"
 Random = "1"
-SciMLBase = "~2.108, ~2.109, ~2.110, ~2.111, ~2.112"
+SciMLBase = "~2.108, ~2.109, ~2.110, ~2.111, ~2.112, 2"
 SparseMatrixColorings = "0.4.20"
 StaticArrays = "1.9"
 Statistics = "1"
