CompatHelper: bump compat for CloudMicrophysics to 0.28, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ ClimaInterpolations = "0.1.0"
 ClimaParams = "0.12.1"
 ClimaTimeSteppers = "0.8.2"
 ClimaUtilities = "0.1.23"
-CloudMicrophysics = "0.27"
+CloudMicrophysics = "0.27, 0.28"
 Dates = "1"
 ForwardDiff = "1"
 Insolation = "0.10.1"
